@@ -1,3 +1,9 @@
+unreleased
+
+* Enhancements
+
+  * If you immediately obtain the fetch mutex, don't double-get because for all you know you're the first setter
+
 0.2.4 / 2012-04-17
 
 * Enhancements
